# obsidian-ai-wiki

./: .gitignore  .graphifyignore  .iwiki.toml  .iwikiignore  CHANGELOG.md  CLAUDE.md  README.md  TODO  esbuild.config.mjs  eslint.config.mjs  manifest.json  package-lock.json  package.json  styles.css  test-output.txt  tsconfig.json  vitest.config.ts  vitest.mock.ts  vitest.setup.ts
.graphify/: .graphify_analysis.json  .graphify_ast.json  .graphify_ast_update.json  .graphify_cached.json  .graphify_chunk_01.json  .graphify_chunk_update_01.json  .graphify_detect.json  .graphify_extract.json  .graphify_incremental.json  .graphify_labels.json  .graphify_old.json  .graphify_python  .graphify_root  .graphify_semantic.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  graph_clustered.json  manifest.json
docs/: README.ru.md  TODO  TODO.md  article-filtering.md  dev.md  mobile-cloud-ollama.md  optimize.md  prompt-architecture.md  publishing.md  rag-quality-recommendations.md
eval/: README.md  example.gold.json
graphify-out/: manifest.json
lat.md/: architecture.md  domain.md  lat.md  llm-pipeline.md  operations.md  query-sentinel.md  tests.md  wiki-graph.md
logs/: agent.jsonl  dev.jsonl
prompts/: base.md  chat.md  evaluator.md  fix.md  (+27 more)
scripts/dspy/: .env.example  CLAUDE.md  Makefile  README.md  optimize.py  pyproject.toml
scripts/dspy/lib/: backend.py  loader.py  optimizer.py  signature.py  writer.py
scripts/dspy/tests/: test_backend.py  test_loader.py  test_optimizer.py  test_signature.py  test_writer.py
(+1035 files in other folders)
