[project]
name = "dspy-optimizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dspy-ai>=2.5",
    "python-dotenv>=1.0",
    "optuna>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
